# cg-lab

./: .gitignore  .gitmodules  README.md
lab2/: CMakeLists.txt
lab2/src/: main.cpp
lab3/: CMakeLists.txt
lab3/src/: main.cpp
lab4/: CMakeLists.txt
lab4/src/: fragment.shader  main.cpp  vertex.shader
lab4/src/texture/: README.md
lab5/: CMakeLists.txt
lab5/src/: main.cpp  vertex.shader
lab6/: CMakeLists.txt
lab6/src/: main.cpp  vertex.shader
vulk/: CMakeLists.txt  main.cpp
